@@ -1,3 +1,9 @@
+2004-11-24  Vincent Noel  <vnoel@cox.net>
+
+	* userprefs.c: parse_syslog is back from the dead. My mistake,
+	this function was actually useful.
+	(prefs_create_defaults): Use parse_syslog to look for logs.
+
 2004-11-23  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (logview_menu_item_set_state): Use
